--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	# or better: https://modmuss50.me/fabric.html
-	minecraft_version = 1.19.2
-	# https://maven.fabricmc.net/net/fabricmc/yarn
-	yarn_mappings = 1.19.2+build.4
-	# https://maven.fabricmc.net/net/fabricmc/fabric-loader
-	loader_version = 0.14.9
+# check these on https://fabricmc.net/develop
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 2.1.0
-	maven_group = carpet
-	archives_base_name = chat-up
+mod_version = 2.1.0
+maven_group = carpet
+archives_base_name = chat-up
 
+# Dependencies
+#fabric_version=0.76.0+1.19.2
